--- a/mytheme/pelican-svbtle/templates/index.html
+++ b/mytheme/pelican-svbtle/templates/index.html
@@ -10,7 +10,9 @@
 						<a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title }}">{{ article.title }}</a>
 					</h1>
 					<abbr class="published" title="{{ article.date.isoformat() }}">{{ article.locale_date }}</abbr>
+                <div style="font-size:15px;width:960px;text-align:justify; text-justify:inter-ideograph"> 
 				<div class="entry-content"> {{ article.summary }} </div>
+                </div>
 				</li>
 			{% endfor %}
 		</ol>
