--- a/themes/aero-dual/source/css/style.light.styl
+++ b/themes/aero-dual/source/css/style.light.styl
@@ -27,7 +27,8 @@ color-revert()
 @import '_helpers/mixins'
 
 @import '_typography/typo.css'
-@import '_typography/highlight.monikai-sublime'
+/*@import '_typography/highlight.monikai-sublime'*/
+@import '_typography/highlight.gruvbox-light'
 @import '_typography/code'
 
 @import '_base'
