--- a/themes/aero-dual/source/css/style.dark.styl
+++ b/themes/aero-dual/source/css/style.dark.styl
@@ -26,7 +26,7 @@ color-revert()
 @import '_helpers/mixins'
 
 @import '_typography/typo.css'
-@import '_typography/highlight.gruvbox-light'
+@import '_typography/highlight.monikai-sublime'
 @import '_typography/code'
 
 @import '_base'
